--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,10 @@ a {
   text-decoration: none;
 }
 main {
-  padding: 2rem;
+  padding: 2.5rem;
 }
 h1 {
-  font-size: 24px;
+  font-size: 1.5rem;
   padding-bottom: 1rem;
 }
 th {
@@ -52,7 +52,7 @@ th {
 
 .twowaynav {
   display: flex;
-  column-gap: 10px;
+  column-gap: 1rem;
   justify-content: center;
 }
 .twowaynav > a {
@@ -61,8 +61,8 @@ th {
   background: var(--akzentfarbe2);
   border: 1px solid var(--akzentfarbe1);
   text-align: center;
-  font-size: 24px;
-  font-weight: 700;
+  font-size: 1.5rem;
+  font-weight: 500;
   padding: 1.5rem 0;
 }
 .twowaynav > a:hover {
@@ -70,16 +70,15 @@ th {
   color: var(--seitenhintergrund);
 }
 
-.offer-detail h1, .request-detail h1 {
+.offer-detail h1,
+.request-detail h1 {
   font-family: "Caveat", cursive;
-  font-weight: 300;
+  font-weight: 200;
+  font-size: 2rem;
 }
-.offer-detail img {
-  background: var(--akzentfarbe3);
-  width: 600px;
-  height: 150px;
-}
-.offer-detail table + div, .request-detail table + div { 
+
+.offer-detail table + div,
+.request-detail table + div {
   margin-top: 1rem;
 }
 .flat-card {
@@ -110,17 +109,17 @@ fieldset {
 }
 .filter-div {
   margin: 0 auto;
-  max-width: 500px; 
+  max-width: 34rem;
 }
 .hid-checkb {
   position: absolute;
   left: -9999px;
 }
-.button-style { 
+.button-style {
   background: var(--akzentfarbe2);
   border: 1px solid var(--akzentfarbe1);
   text-align: center;
-  font-size: 18px;
+  font-size: 1.15rem;
   font-weight: 500;
   padding: 0.8rem 0;
   display: block;
@@ -131,18 +130,19 @@ fieldset {
   background: var(--akzentfarbe1);
   color: var(--seitenhintergrund);
 }
-.hid-checkb ~ .filter-form { 
-  max-height: 0; 
+.hid-checkb ~ .filter-form {
+  max-height: 0;
   overflow: hidden;
   transition: max-height 0.4s ease-out;
 }
-.filter-form label, .filter-form input { 
+.filter-form label,
+.filter-form input {
   display: inline-block;
 }
-.filter-form label { 
+.filter-form label {
   width: 40%;
 }
-.filter-form input { 
+.filter-form input {
   width: 60%;
   padding-left: 0.5rem;
   background: var(--schriftfarbe);
@@ -153,22 +153,80 @@ fieldset {
   padding: 0 0 1rem 0;
 }
 .filter-form > fieldset > div {
-  padding: 1rem 1rem 0 1rem
+  padding: 1rem 1rem 0 1rem;
 }
-.hid-checkb:checked ~ .filter-form { max-height: 350px; }
+.hid-checkb:checked ~ .filter-form {
+  max-height: 22rem;
+}
 
+.slide-container {
+  margin: 2rem 0;
+  max-width: 1024px;
+}
+.each-slide-effect > div {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  background-size: cover;
+  height: 50vw;
+  background-position: center;
+}
 
+.request-detail .slide-container {
+  max-width: 400px;
+}
+.request-detail .each-slide-effect > div {
+  height: 50vw;
+}
 
+.each-slide-effect > div {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  background-size: cover;
+  height: 50vw;
+  background-position: center;
+}
+
+.each-slide-effect span {
+  padding: 0.5rem;
+  background: #45414eaf;
+  text-align: center;
+}
+
+.react-slideshow-container .default-nav:last-of-type {
+  right: 10px !important;
+}
+
+.react-slideshow-container .default-nav:first-of-type {
+  left: 10px !important;
+}
 
 @media only screen and (max-width: 480px) {
-  .filter-form label, .filter-form input { 
+  .filter-form label,
+  .filter-form input {
     display: block;
   }
-  .filter-form label { 
+  .filter-form label {
     width: 100%;
   }
-  .filter-form input { 
+  .filter-form input {
     width: 100%;
   }
 }
 
+@media only screen and (min-width: 1104px) {
+  .each-slide-effect > div {
+    height: 575px;
+  }
+}
+@media only screen and (min-width: 480px) {
+  .request-detail .each-slide-effect > div {
+    height: 600px;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  body {
+    font-size: 20px;
+  }
+}
