--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,9 @@ header > nav {
   font-weight: 400;
   align-items: flex-start;
 }
+section + section { margin-top: 2rem; }
+
+
 .button-1 {
   background: var(--akzentfarbe1);
   border: 1px solid var(--akzentfarbe2);
@@ -303,7 +306,7 @@ fieldset {
   bottom: 5px;
 }
 
-.flex-3 > div > a,
+.flex-3 > div > a:not(.button-2),
 .flex-3 > div > label {
   position: absolute;
   top: 50%;
@@ -312,19 +315,40 @@ fieldset {
   padding-top: 0.65rem;
   left: 50%;
   margin-top: -1.625rem;
+  z-index: 5;
 }
 
-.flex-3 > div > a:hover,
+.flex-3 > div > a:not(.button-2):hover,
 .flex-3 > div > label:hover {
   opacity: 100%;
   background-color: var(--akzentfarbe1);
 }
-
-.flex-3 > div > a {
-  margin-left: 1.2rem;
+.flex-3 > div > a.button-2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 5;
+  width: 8rem;
+  text-align: center;
 }
-.flex-3 > div > label {
-  margin-left: -3.2rem;
+.pos-1-2 {
+  margin-left: -3.95rem;
+}
+.pos-2-2 {
+  margin-left: 0.45rem;
+}
+
+.pos-1-3 {
+  margin-left: -10rem;
+  margin-top: -2rem !important;
+}
+.pos-2-3 {
+  margin-left:6.5rem;
+  margin-top: -2rem !important;
+}
+.pos-3-3 {
+  margin-left: -4rem;
+  margin-top: 3.5rem;
 }
 
 .flat-card-userpage > input:checked ~ img {
@@ -342,6 +366,34 @@ fieldset {
 }
 textarea::placeholder {
   font-size: 75%;
+}
+.matchcard-image {
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 75%;
+}
+.matchcard-image > img {
+  position: absolute;
+  width: 100%; 
+}
+.matchcard-image-tl {
+  clip-path: polygon(0% 0%, 0% 100%, 100% 0%);
+}
+.matchcard-image-br {
+  clip-path: polygon(100% 100%, 100% 0%, 0% 100%);
+}
+.matchcard-image > span {
+  position: absolute;
+  background: rgba(69, 65, 78, 0.7);
+  padding: 0.2rem 0.4rem;
+  top: 0;
+  left: 0;
+}
+.matchcard-image > span:last-child {
+  top: auto;
+  left: auto;
+  right: 0;
+  bottom: 0;
 }
 @media only screen and (max-width: 480px) {
   .filter-form label,
